<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/titleText"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495" app:layout_constraintVertical_bias="0.023"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/movieEntry"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/titleText"
            app:layout_constraintHorizontal_bias="0.126" app:layout_constraintVertical_bias="0.059"
            android:hint="@string/movie_entry_hint"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/snackEntry"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieEntry"
            app:layout_constraintHorizontal_bias="0.126" app:layout_constraintVertical_bias="0.066"
            android:hint="@string/snack_entry_hint"/>
    <Button
            android:text="@string/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addMovieButton"
            app:layout_constraintStart_toEndOf="@+id/movieEntry" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/titleText"
            app:layout_constraintHorizontal_bias="0.564" app:layout_constraintVertical_bias="0.057"
            android:onClick="AddMovie"/>
    <Button
            android:text="@string/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addSnackButton"
            app:layout_constraintStart_toEndOf="@+id/snackEntry"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addMovieButton" app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintVertical_bias="0.057" android:onClick="AddSnack"/>
    <TextView
            android:text="@string/subtitle"
            android:layout_width="291dp"
            android:layout_height="35dp" android:id="@+id/secondaryTitle"
            app:layout_constraintTop_toBottomOf="@+id/snackEntry"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.08" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center_horizontal"/>
    <EditText
            android:layout_width="285dp"
            android:layout_height="46dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/searchMovieEntry"
            app:layout_constraintTop_toBottomOf="@+id/secondaryTitle"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.055"
            android:hint="@string/search_bar"/>
    <Button
            android:text="@string/random_button"
            android:layout_width="137dp"
            android:layout_height="38dp" android:id="@+id/randomizeButton"
            app:layout_constraintTop_toBottomOf="@+id/searchMovieEntry"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.77"
            app:layout_constraintVertical_bias="0.0" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:onClick="RandomizeMovie"/>
    <Button
            android:text="@string/create_button"
            android:layout_width="129dp"
            android:layout_height="69dp" android:id="@+id/createFinalButton"
            app:layout_constraintTop_toBottomOf="@+id/randomizeButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.111" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:onClick="CreateFinal"/>
    <TextView
            android:text="@string/results"
            android:layout_width="225dp"
            android:layout_height="150dp" android:id="@+id/resultsText"
            app:layout_constraintTop_toBottomOf="@+id/createFinalButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:gravity="center_horizontal"/>
</androidx.constraintlayout.widget.ConstraintLayout>